# htmx-broadcast

./: .gitignore  app.py  connection_manager.py  crud.py  database.db  db.py  helpers.py  htmx.py  main.py  models.py  pyproject.toml  requirements.txt  templating.py
templates/: _foo.html  home.html
