[project]
name = "htmx-broadcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "faker>=37.4.0",
    "ruff>=0.12.0",
]
